# Gaja

./: 1K_samples_training.ipynb  README.md  pyproject.toml  requirements.txt  training_the_model.ipynb
local-inference/Ollama/: Modelfile.txt
src/Utils/: merge_adapters.py  push_to_hub.py  utils.py
src/dataset/: preprocess.py
src/eval/: Indic-summarization.py  indic_NLI.py  indic_Paraphrase.py  indic_boolqa.py  indic_qa.py  indic_sentiment_analysis.py
src/finetune/: 1K_samples_training.ipynb  config.yaml  training.py  training_the_model.ipynb
